--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ addopts = "-p no:warnings"
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.2"
 pytest-cov = "^5.0.0"
+taskipy = "^1.13.0"
 
 [tool.taskipy.tasks]
 run = 'fastapi dev fast_api/app.py'
