--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,10 @@ python = "3.12.*"
 fastapi = "^0.112.2"
 pydantic-settings = "^2.4.0"
 alembic = "^1.13.2"
+sqlalchemy = "^2.0.34"
+pwdlib = {extras = ["argon2"], version = "^0.2.1"}
+pyjwt = "^2.9.0"
+python-multipart = "^0.0.9"
 
 [tool.pytest.ini_options]
 pythonpath = "."
@@ -32,7 +36,7 @@ lint = 'ruff check . && ruff check . --diff'
 format = 'ruff check . --fix && ruff format .'
 run = 'fastapi dev fast_api/app.py'
 pre_test = 'task lint'
-test = 'pytest -s -x -vv'
+test = 'pytest -s -q -vv'
 post_test = 'coverage html'
 
 [build-system]
