--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,10 @@ sqlalchemy = "^2.0.34"
 pwdlib = {extras = ["argon2"], version = "^0.2.1"}
 pyjwt = "^2.9.0"
 python-multipart = "^0.0.9"
+uvicorn = "^0.30.6"
+email-validator = "^2.2.0"
+psycopg = {extras = ["binary"], version = "^3.2.1"}
+
 
 [tool.pytest.ini_options]
 pythonpath = "."
@@ -25,6 +29,8 @@ pytest-cov = "^5.0.0"
 taskipy = "^1.13.0"
 factory-boy = "^3.3.1"
 freezegun = "^1.5.1"
+ruff = "^0.6.4"
+httpx = "^0.27.2"
 
 [tool.ruff.format]
 preview = true
