--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ factory-boy = "^3.3.1"
 freezegun = "^1.5.1"
 ruff = "^0.6.4"
 httpx = "^0.27.2"
+testcontainers = "^4.8.1"
 
 [tool.ruff.format]
 preview = true
