adiciona mais seguranca a autenticacao, limite de tempo e testes TDD

--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -1,5 +1,5 @@
 name: Pipeline
-on: [push, pull_request]
+on: [ push, pull_request ]
 
 jobs:
   test:
@@ -12,6 +12,9 @@ jobs:
       ACCESS_TOKEN_EXPIRE_MINUTES: ${{ secrets.ACCESS_TOKEN_EXPIRE_MINUTES }}
 
     steps:
+      - name: Clear Cache
+      - run: rm -rf ${{ github.workspace }}/*
+
       - name: Checkout
         uses: actions/checkout@v4
 
